DuPont DevSB/src/objects/SFDC_Script_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N30000001GaNJEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>(10/12/2017) - Removed &quot;Case__c&quot; logic/references as part of remediation effort.</description>
        <formula>if( TEXT(YEAR(Date_Taken__c)) = &quot;&quot;,   if(Account__c&lt;&gt;&quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000jQ8w&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Account__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;),  if(Opportunity__c&lt;&gt;&quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000jQ8v&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Opportunity__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;),  if(Lead__c&lt;&gt;&quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000jQ8s&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Lead__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;),   if(Contact__c&lt;&gt;&quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000jQ8u&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Contact__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;),&quot;&quot;)  ))),  HYPERLINK(&quot;/&quot; &amp; Id, &quot;View Results&quot;)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N30000001GaNMEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Script Header</relationshipLabel>
        <relationshipName>Script_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_For_Scripts__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01530000000JWzS&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help For Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N30000001GaNNEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N30000001GaNOEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Script Header</relationshipLabel>
        <relationshipName>Script_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The final score for the script.</description>
        <label>Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Script Results</relationshipLabel>
        <relationshipName>R00N30000001GaNHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fOpenscript__c</fullName>
        <formula>HYPERLINK(&quot;/apex/script?sh=&quot;&amp;Id,&quot;Open Script&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Script</label>
        <type>Text</type>
    </fields>
    <label>Script Header</label>
    <nameField>
        <displayFormat>SH-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>